<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/task"
            android:title="@string/menu_tasks"
            />
    <item
        android:id="@+id/nav_goods"
        android:icon="@drawable/goods"
        android:title="@string/menu_goods" />

        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/income"
            android:title="@string/menu_income" />


    <item
        android:id="@+id/nav_order"
        android:icon="@drawable/customer"
        android:title="@string/nav_order" />

            <item
                android:id="@+id/nav_customer"
                android:icon="@drawable/customer"
                android:title="@string/menu_customer" />

            <item
                android:id="@+id/nav_product"
                android:icon="@drawable/products"
                android:title="@string/menu_product" />
            <item
                android:id="@+id/nav_sales"
                android:icon="@drawable/sales"
                android:title="@string/menu_sales"></item>
            <item
                android:id="@+id/nav_invoice"
                android:icon="@drawable/invoice"
                android:title="@string/menu_invoice" />
            <item
                android:id="@+id/nav_report"
                android:icon="@drawable/report"
                android:title="@string/menu_report" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/setting"
                android:title="@string/menu_setting" />



</menu>
