<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    tools:showIn="@layout/erb_invoice">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/colorPrimary"

        >


        <TextView
            android:id="@+id/S_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_category"
            android:layout_marginStart="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/S_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/S_size"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/S_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_amount"
            android:layout_marginStart="50dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/S_unite_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_unite_price"
            android:layout_marginStart="50dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/S_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_tax"
            android:layout_marginStart="50dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/S_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_discount"
            android:layout_marginStart="50dp"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/S_dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_Total"
            android:layout_marginStart="50dp"
            android:textSize="18sp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>