<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="100"
    android:id="@+id/FragmentAddCustomer"
    >
<ScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
        <androidx.cardview.widget.CardView
            android:id="@+id/personalDetailsCard"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:layout_gravity="top"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cus_FirstName"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        style="@style/modifiedEditText"
                        android:backgroundTint="@color/primaryTextColor"
                        android:hint="@string/cus_fname"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cus_LastName"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:ems="10"
                        android:hint="@string/cus_lname"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputMob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/address"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:hint="@string/C_address"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/PhoneNumber"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:inputType="phone"
                        android:hint="@string/cus_phone_number" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Cus_email"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:minLines="2" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Max_credit"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:hint="@string/Maximum_credit"
                        android:inputType="number"
                        android:minLines="2" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/cust_Type"
                        style="@style/modifiedEditText"
                        android:fontFamily="@font/droid"
                        android:textSize="12dp"
                        android:textColor="#3C3B3B"
                        android:hint="@string/cus_type"
                        android:inputType="text"
                        android:minLines="2" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/save_send"
                    android:layout_width="200dp"
                    android:fontFamily="@font/droid"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/save_send"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="14sp"
                    android:background="@drawable/login_button_bk" />

                <Button
                    android:id="@+id/editCus"
                    android:layout_width="200dp"
                    android:fontFamily="@font/droid"
                    android:textColor="#323643"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/save_send"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:layout_gravity="center"
                    android:background="@drawable/edit_btn_new"
                    android:text="@string/edit"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
</ScrollView>
</RelativeLayout>