<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SalesInvoice_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    >
    <TableLayout
        android:id="@+id/invoice_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:layout_marginHorizontal="0dp"
        android:background="#BFBFC0"
        >

        <TableRow>
            <TextView
                android:id="@+id/S_item_category"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/S_category"
                android:textColor="#4E4C4C"
                android:fontFamily="@font/droid"
                android:textSize="13sp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <TextView
                android:id="@+id/S_item_size"
                android:textColor="#4E4C4C"
                android:fontFamily="@font/droid"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:hint="@string/S_size"
                android:textSize="13sp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/S_item_amount"
                android:textColor="#4E4C4C"
                android:fontFamily="@font/droid"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/S_amount"
                android:textSize="13sp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>


            <TextView
                android:id="@+id/S_item_unite_price"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textColor="#4E4C4C"
                android:hint="000"
                android:fontFamily="@font/droid"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/S_item_tax"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/S_tax"
                android:textColor="#4E4C4C"
                android:fontFamily="@font/droid"
                android:textSize="13sp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/S_item_discount"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:hint="@string/S_discount"
                android:textSize="13sp"
                android:textColor="#4E4C4C"
                android:fontFamily="@font/droid"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#fff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>
        </TableRow>



    </TableLayout>
</RelativeLayout>

